--- a/app/(home)/contact/contact.module.css
+++ b/app/(home)/contact/contact.module.css
@@ -37,6 +37,7 @@
   font-size: 2rem;
   color: #007bff;
   margin-bottom: 10px;
+  margin : 0 auto ;
 }
 
 .infoCard h3 {
@@ -67,6 +68,8 @@
   padding: 10px;
   border: 1px solid #ddd;
   border-radius: 5px;
+  color:black;
+  background:white;
 }
 
 .button {
