--- a/app/globals.css
+++ b/app/globals.css
@@ -15,6 +15,17 @@
     --foreground: #ededed;
   }
 }
+.smalls{
+  font-size:12px;
+}
+.imagee{
+  width :100%;
+  object-fit:contain;
+}
+.bggg{
+  background-image:url("/images/fulllogo.png") ;
+  background-position: center ;
+}
 .stickyy{
   position:sticky;
   top:0;
